Start with configs

--- a/Fase 3/.env.example
+++ b/Fase 3/.env.example
@@ -50,3 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TOTVS_ENABLE=false
+TOTVS_API="http://192.168.0.26:8888/scripts/cgiip.exe"
+TOTVS_BASE="MD-PROT"
+TOTVS_KEY="128964ard"
+TOTVS_COD_EMITENTE=138449
