--- a/Fase 3/package.json
+++ b/Fase 3/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.0",
         "bootstrap": "^5.1.3",
-        "bootstrap-icons": "^1.9.1"
+        "bootstrap-icons": "^1.9.1",
+        "sweetalert2": "^11.4.33"
     }
 }
